--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -65,7 +65,7 @@ There is a growing interest in understanding how ecological networks respond to 
 
 Here we review for the first time stressor responses of marine food webs for areas located along a Southwest Atlantic to Antarctic gradient (45 - 78°S, Figure 1). We considered proven and expected changes in food webs driven by global change-related stressors in selected areas along this large-scale latitudinal range.
 The aim of this review is threefold: 1) describe the complexity and structure of marine food webs along the Southwest Atlantic to Antarctic axis from a network perspective; 2) identify the ongoing global change-related stressors for each marine ecosystem containing the food webs; and 3) review proven food web changes and elaborate on a series of alternative hypotheses on how the identified stressors might affect food web features (energy flow, stability and topology), combining information on node- and network-level properties. 
-To identify the main stressors, we performed an exploratory and configurative review instead of a systematic review [@Haddaway2015], where we considered more than 200 peer-reviewed articles retrieved mainly from Google Scholar using keywords combining location ( "San Jorge Gulf", "Beagle Channel", "Burdwood Bank", "Scotia Sea", "Weddell Sea", "Potter Cove") and stressors ("acidification", "alien species", "climate change", "contamination", "fishery", "glacier retreat", "global warming", "ice scouring", "invasive species", "marine contaminant", "microplastics", "mercury", "pollution", "sea ice", "sea warming", "urban waste"). Additionally, we specifically searched for publications by authors we know may have conducted related studies in the area. We performed this type of review because our objective was to formulate evidenced-based hypotheses rather than providing an exhaustive list of species-level stressors for each ecosystem.
+To identify the main stressors, we performed an exploratory and configurative review [@Haddaway2015], where we considered more than 200 peer-reviewed articles retrieved mainly from Google Scholar using keywords combining location ( "San Jorge Gulf", "Beagle Channel", "Burdwood Bank", "Scotia Sea", "Weddell Sea", "Potter Cove") and stressors ("acidification", "alien species", "climate change", "contamination", "fishery", "glacier retreat", "global warming", "ice scouring", "invasive species", "marine contaminant", "microplastics", "mercury", "pollution", "sea ice", "sea warming", "urban waste"). Additionally, we specifically searched for publications by authors we know may have conducted related studies in the area including grey literature. We performed this type of review because our objective was to formulate evidenced-based hypotheses rather than providing an exhaustive list of species-level stressors for each ecosystem.
 Finally, we suggest which additional data and analyses are needed to gain insights into the stressors’ effects on food web properties in the Southwest Atlantic to Antarctic region.
 
 ## 2. Assessment of the food web structure and stressors in the Southwest Atlantic - Antarctic region
