--- a/manuscript.tex
+++ b/manuscript.tex
@@ -220,7 +220,7 @@ changes and elaborate on a series of alternative hypotheses on how the
 identified stressors might affect food web features (energy flow,
 stability and topology), combining information on node- and
 network-level properties. To identify the main stressors, we performed
-an exploratory and configurative review instead of a systematic review
+an exploratory and configurative review 
 (Haddaway et al. 2015), where we considered more than 200 peer-reviewed 
 articles retrieved mainly from Google Scholar using keywords combining 
 location ( "San Jorge Gulf", "Beagle Channel", "Burdwood Bank", "Scotia Sea", 
@@ -229,7 +229,7 @@ location ( "San Jorge Gulf", "Beagle Channel", "Burdwood Bank", "Scotia Sea",
 "ice scouring", "invasive species", "marine contaminant", "microplastics", "mercury", 
 "pollution", "sea ice", "sea warming", "urban waste"). Additionally, we 
 specifically searched for publications by authors we know may have conducted 
-related studies in the area. We performed this type of review because our 
+related studies in the area including grey literature. We performed this type of review because our 
 objective was to formulate
 evidenced-based hypotheses rather than providing an exhaustive list of
 species-level stressors for each ecosystem. Finally, we suggest which
