--- a/manuscript.tex
+++ b/manuscript.tex
@@ -1413,6 +1413,18 @@ Investigaciones Científicas (CONICET, code PIP 2022-2024 \#0907),
 Argentina. S.K. gratefully acknowledges the support from the Walter and
 Andrée de Nottbeck Foundation, Finland.
 
+
+\subsection{Competing interests}\label{Competinginterests}
+
+The authors declare there are no competing interests.
+
+\subsection{Data Availability}\label{DataAvailability}
+
+All data used in this manuscript is publicly available and compiled on a
+Github repository \url{https://github.com/EcoComplex/SouthFWReview} and
+Zenodo \url{https://zenodo.org/doi/10.5281/zenodo.11060734}
+
+
 \subsection*{References}\label{references}
 \addcontentsline{toc}{subsection}{References}
 
